# pydantic-shapely

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  test.py  test_api.old  test_api.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pylint.yml  pytest.yml  python-publish.yml
.github/workflows/ISSUE_TEMPLATE/: issue.md
docs/src/: conf.py  examples.rst  index.rst  readme.rst
docs/src/examples/: skeleton.nblink  update_examples.py
src/pydantic_shapely/: __init__.py  __version__.py  annotations.py  base.py  factory.py
src/pydantic_shapely/geojson/: __init__.py  feature.py  feature_collection.py
src/pydantic_shapely/geojson/geometry/: __init__.py  _base.py  geometry_collection.py  linestring.py  multilinestring.py  multipoint.py  multipolygon.py  point.py  polygon.py
tests/: conftest.py  test_annotations.py
tests/geojson/: test_create_model.py  test_feature_collection.py  test_geometry.py
